# phigros-save-tool

./: .gitignore  PhigrosSaveManager.spec  README.md  pyproject.toml  run_gui.py  yyw必备nb存档.xml
docs/: video-prompt.md
examples/: settings.json  songs.json
src/phigros_save_tool/: __init__.py  build.py  cli.py  crypto.py  gui.py  unpack.py  version_manager.py
tests/: test_build.py  test_cli_build.py  test_crypto.py
